--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,9 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  labels:
-    app: register-app
-  name: register-app
+  name: register-app-deployment
 spec:
   replicas: 2
   selector:
@@ -11,25 +9,18 @@ spec:
       app: register-app
   template:
     metadata:
-      creationTimestamp: null
       labels:
         app: register-app
     spec:
       containers:
-      - image: kamrandevops23/register-app-pipeline:latest
-        name: register-app-pipeline
----
-apiVersion: v1
-kind: Service
-metadata:
-  labels:
-    app: register-app
-  name: app-svc
-spec:
-  ports:
-  - port: 80
-    protocol: TCP
-    targetPort: 8080
-  selector:
-    app: register-app
-  type: LoadBalancer
+        - name: register-app
+          image: kamrandevops23/register-app-pipeline:latest
+          resources:
+            limits:
+              memory: "256Mi"
+              cpu: "500m"
+          ports:
+            - containerPort: 8080
+
+
+
